Update mod17 - Tarefa_2.ipynb

--- a/Módulo 17 - Árvores II (Parte II árvore de classificação)/mod17 - Tarefa_2.ipynb
+++ b/Módulo 17 - Árvores II (Parte II árvore de classificação)/mod17 - Tarefa_2.ipynb
@@ -1222,7 +1222,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "#Calculando os ccp_alohas:\n",
+    "#Calculando os ccp_alphas:\n",
     "caminho = DecisionTreeClassifier(random_state=2360873).cost_complexity_pruning_path(X_train, y_train)\n",
     "ccp_alphas = caminho.ccp_alphas\n",
     "\n",
