--- a/Módulo 18 - Regressão Logística I/mod18_ex01.ipynb
+++ b/Módulo 18 - Regressão Logística I/mod18_ex01.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
        "      <td>72</td>\n",
        "      <td>25</td>\n",
        "      <td>97</td>\n",
-       "      <td>25.773196</td>\n",
+       "      <td>0.257732</td>\n",
        "      <td>0.347222</td>\n",
        "      <td>0.409672</td>\n",
        "      <td>-1.057790</td>\n",
@@ -588,7 +588,7 @@
        "      <td>92</td>\n",
        "      <td>114</td>\n",
        "      <td>206</td>\n",
-       "      <td>55.339806</td>\n",
+       "      <td>0.553398</td>\n",
        "      <td>1.239130</td>\n",
        "      <td>1.461996</td>\n",
        "      <td>0.214410</td>\n",
@@ -599,7 +599,7 @@
        "      <td>164</td>\n",
        "      <td>139</td>\n",
        "      <td>303</td>\n",
-       "      <td>45.874587</td>\n",
+       "      <td>0.458746</td>\n",
        "      <td>0.847561</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.165392</td>\n",
@@ -612,9 +612,9 @@
       "text/plain": [
        "flag_doente    0    1  All  pct_doentes      odds  OR_vs_All    logito  \\\n",
        "sex                                                                      \n",
-       "0.0           72   25   97    25.773196  0.347222   0.409672 -1.057790   \n",
-       "1.0           92  114  206    55.339806  1.239130   1.461996  0.214410   \n",
-       "All          164  139  303    45.874587  0.847561   1.000000 -0.165392   \n",
+       "0.0           72   25   97     0.257732  0.347222   0.409672 -1.057790   \n",
+       "1.0           92  114  206     0.553398  1.239130   1.461996  0.214410   \n",
+       "All          164  139  303     0.458746  0.847561   1.000000 -0.165392   \n",
        "\n",
        "flag_doente       WOE  \n",
        "sex                    \n",
@@ -623,14 +623,14 @@
        "All          0.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tab = (pd.crosstab(df['sex'], df['flag_doente'], margins= True)\n",
-    "        .assign(pct_doentes = lambda x: (x[1]/x['All'])*100)\n",
+    "        .assign(pct_doentes = lambda x: (x[1]/x['All']))\n",
     "        .assign(odds = lambda x: x[1]/x[0])\n",
     "        .assign(OR_vs_All = lambda x: x['odds']/x.loc['All','odds'])\n",
     "        .assign(logito = lambda x: np.log(x['odds']))\n",
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "      <td>47</td>\n",
        "      <td>16</td>\n",
        "      <td>63</td>\n",
-       "      <td>25.396825</td>\n",
+       "      <td>0.253968</td>\n",
        "      <td>0.340426</td>\n",
        "      <td>0.401653</td>\n",
        "      <td>-1.077559</td>\n",
@@ -751,7 +751,7 @@
        "      <td>42</td>\n",
        "      <td>22</td>\n",
        "      <td>64</td>\n",
-       "      <td>34.375000</td>\n",
+       "      <td>0.343750</td>\n",
        "      <td>0.523810</td>\n",
        "      <td>0.618020</td>\n",
        "      <td>-0.646627</td>\n",
@@ -763,7 +763,7 @@
        "      <td>32</td>\n",
        "      <td>39</td>\n",
        "      <td>71</td>\n",
-       "      <td>54.929577</td>\n",
+       "      <td>0.549296</td>\n",
        "      <td>1.218750</td>\n",
        "      <td>1.437950</td>\n",
        "      <td>0.197826</td>\n",
@@ -775,7 +775,7 @@
        "      <td>13</td>\n",
        "      <td>32</td>\n",
        "      <td>45</td>\n",
-       "      <td>71.111111</td>\n",
+       "      <td>0.711111</td>\n",
        "      <td>2.461538</td>\n",
        "      <td>2.904261</td>\n",
        "      <td>0.900787</td>\n",
@@ -787,7 +787,7 @@
        "      <td>30</td>\n",
        "      <td>30</td>\n",
        "      <td>60</td>\n",
-       "      <td>50.000000</td>\n",
+       "      <td>0.500000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.179856</td>\n",
        "      <td>0.000000</td>\n",
@@ -799,7 +799,7 @@
        "      <td>164</td>\n",
        "      <td>139</td>\n",
        "      <td>303</td>\n",
-       "      <td>45.874587</td>\n",
+       "      <td>0.458746</td>\n",
        "      <td>0.847561</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>-0.165392</td>\n",
@@ -813,12 +813,12 @@
       "text/plain": [
        "flag_doente       0    1  All  pct_doentes      odds  OR_vs_All    logito  \\\n",
        "age                                                                         \n",
-       "(28.999, 45.0]   47   16   63    25.396825  0.340426   0.401653 -1.077559   \n",
-       "(45.0, 53.0]     42   22   64    34.375000  0.523810   0.618020 -0.646627   \n",
-       "(53.0, 58.0]     32   39   71    54.929577  1.218750   1.437950  0.197826   \n",
-       "(58.0, 62.0]     13   32   45    71.111111  2.461538   2.904261  0.900787   \n",
-       "(62.0, 77.0]     30   30   60    50.000000  1.000000   1.179856  0.000000   \n",
-       "All             164  139  303    45.874587  0.847561   1.000000 -0.165392   \n",
+       "(28.999, 45.0]   47   16   63     0.253968  0.340426   0.401653 -1.077559   \n",
+       "(45.0, 53.0]     42   22   64     0.343750  0.523810   0.618020 -0.646627   \n",
+       "(53.0, 58.0]     32   39   71     0.549296  1.218750   1.437950  0.197826   \n",
+       "(58.0, 62.0]     13   32   45     0.711111  2.461538   2.904261  0.900787   \n",
+       "(62.0, 77.0]     30   30   60     0.500000  1.000000   1.179856  0.000000   \n",
+       "All             164  139  303     0.458746  0.847561   1.000000 -0.165392   \n",
        "\n",
        "flag_doente          WOE  media_age  \n",
        "age                                  \n",
@@ -830,14 +830,14 @@
        "All             0.000000        NaN  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tab2 = (pd.crosstab(cat_age,df.flag_doente,margins=True)\n",
-    "        .assign(pct_doentes = lambda x: (x[1]/x['All'])*100)\n",
+    "        .assign(pct_doentes = lambda x: (x[1]/x['All']))\n",
     "        .assign(odds = lambda x: x[1]/x[0])\n",
     "        .assign(OR_vs_All = lambda x: x['odds']/x.loc['All','odds'])\n",
     "        .assign(logito = lambda x: np.log(x['odds']))\n",
@@ -983,13 +983,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
